# MWA

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  auth.py  database.py  decorators.py  models.py  omdb_client.py  routes.py  views.py
templates/: add_movie.html  base.html  favorites.html  index.html  profile.html  register.html
templates/components/: _movie_card.html
tests/: conftest.py  test_app.py  test_auth.py  test_cli.py  test_database.py  test_decorators.py  test_models.py  test_omdb_client.py  test_routes,py.py  test_routes.py  test_search.py  test_security_injection.py  test_views.py
