[project]
name = "moviewebapp"
version = "0.1.0"
description = "A dynamic Flask web application for tracking favorite movies via OMDb API."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.1.0b3",
    "requests>=2.31.0",
    "werkzeug>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pylint>=3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src"]